aggiunto aggiornamento logo ristorante
